applied relative position and z-index of 1000 to header element to ensure it sits above the map.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,12 @@ font-family: 'Montserrat', sans-serif;*/
 
 }
 
+/*Positioning*/
+header {
+    position: relative;
+    z-index: 1000;
+}
+
 
 /*Fonts and Text Sizing*/
 body {
